# aws-shadows-http-api

./: .gitignore  LICENSE  README.md  __init__.py  app.py  canonical_request.py  conf.template  constants.py  pyproject.toml  script.sh  shadow_state_skeleton.json  string_to_sign.py
src/: __init__.py  app.py  canonical_request.py  logs.py  string_to_sign.py
src/aws_create_request/: __init__.py  app.py  canonical_request.py  constants.py  string_to_sign.py
tests/: all_tests.py  tests_canonical_request.py  tests_credentials.py
