[project]
name = "aws_create_request"
version = "0.0.1"
description = "Install if you want to help the development "
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["AWS", "shadows", "iot", "api", "http"]
authors = [
  { name="Amaury Derigny", email="amaury.derigny@smile.fr" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Unix",
]

[project.urls]
"Homepage" = "https://github.com/Aderr0/aws-shadows-http-api"
"Source" = "https://github.com/Aderr0/aws-shadows-http-api"

[project.scripts]
aws_shadows = "aws_create_request:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["aws_create_request.tests*", "tests*"]